<resources>
    <string name="app_name">Movflix</string>
    <string name="app_version">3.0</string>
    <string name="version">Version</string>
    <string name="movies">Movies</string>
    <string name="tvshows">TV Shows</string>
    <string name="title">Title</string>
    <string name="score">Score</string>
    <string name="user_score">User score</string>
    <string name="Overview">overview</string>
    <string name="release_date">Release date</string>
    <string name="first_air_date">First air date</string>
    <string name="backdrop">Backdrop</string>
    <string name="genres">Genres</string>
    <string name="duration">Duration</string>
    <string name="_0_0">0.0</string>
    <string name="Tagline">tagline</string>
    <string name="status">Status</string>
    <string name="original_language">Original language</string>
    <string name="language">Language</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="production_companies">Production companies</string>
    <string name="Homepage">homepage</string>
    <string name="error_occured">Error occurred</string>
    <string name="current_season">Current season</string>
    <string name="season">Season</string>
    <string name="yyyy">YYYY</string>
    <string name="episode">Episode</string>
    <string name="episodes">Episodes</string>
    <string name="all_seasons">All seasons</string>
    <string name="bajp">BAJP</string>
    <string name="image">image</string>
    <string name="search">Search</string>
    <string name="result_could_not_be_loaded">Result could not be loaded</string>
    <string name="retry">Retry</string>
    <string name="result_not_found">Result not found</string>
    <string name="action_search">Search</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_about">About</string>
    <string name="action_favourites">Favourites</string>
    <string name="favourites">Favourites</string>
    <string name="tvshow_detail">TvShow Detail</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="about">About</string>
</resources>