...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.tvshows.TvshowsFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tvshow"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="16dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
...
